k8s_app/02-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-1-deployment
  namespace: myapp
spec:
  selector:
    matchLabels:
      app: nginx-1
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx-1
    spec:
      containers:
        - name: nginx
          image: ipirva/nginx-php
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: web-80
          volumeMounts:
            - name: web-html-data
              mountPath: /usr/share/nginx/html
              subPath: web-1
      volumes:
        - name: web-html-data
          persistentVolumeClaim:
            claimName: local-web-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-2-deployment
  namespace: myapp
spec:
  selector:
    matchLabels:
      app: nginx-2
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx-2
    spec:
      containers:
        - name: nginx
          image: ipirva/nginx-php
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: web-80
          volumeMounts:
            - name: web-html-data
              mountPath: /usr/share/nginx/html
              subPath: web-2
      volumes:
        - name: web-html-data
          persistentVolumeClaim:
            claimName: local-web-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: my-web-service-1
  namespace: myapp
  labels:
    app: nginx-1
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: web-80
  selector:
    app: nginx-1
---
apiVersion: v1
kind: Service
metadata:
  name: my-web-service-2
  namespace: myapp
  labels:
    app: nginx-2
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: web-80
  selector:
    app: nginx-2
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: service-web-ingress
  namespace: myapp
  annotations:
    kubernetes.io/ingress.class: "nsx"
    ncp/use-regex: "true"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: mytest.fr
      http:
        paths:
          - path: /service1/.*
            backend:
              serviceName: my-web-service-1
              servicePort: 80
          - path: /service2/.*
            backend:
              serviceName: my-web-service-2
              servicePort: 80
